<resources>
    <string name="app_name">FoodApp</string>
    <string name="rebrain">Rebrain</string>
    <string name="images_food">FoodAppImages</string>
    <string name="intro_text">Cервис для покупки еды</string>
    <string name="intro_text_about">В этом приложении можно собрать продуктовую корзину по самым низким ценам</string>
    <string name="main_tab_text">Main</string>
    <string name="favorite_tab_text">Favorite</string>
    <string name="icon_button">icon tab bar</string>
    <string name="toolbar_text_main">Главный</string>
    <string name="toolbar_text_favorite">Избанное</string>
    <string name="simple_text_product_name">Салат из морских водорослей с ореховым соусом</string>
    <string name="simple_number_product_price">500</string>
    <string name="description_img">img_product</string>
    <string name="button_switch_menu">Switch view</string>
    <string name="exit_title_dialog">Выход</string>
    <string name="exit_message_dialog">Вы хотите выйти из приложения?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
</resources>
