<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="176dp"
        android:layout_height="216dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/image_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/description_img"
                android:src="@mipmap/img_product_one" />

        <TextView
                android:id="@+id/text_for_product"
                style="@style/TextView.Small.Grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:text="@string/simple_text_product_name" />

        <TextView
                android:id="@+id/text_for_price"
                style="@style/TextView.Normal.Green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:text="@string/simple_number_product_price"
                android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>